--- a/MasaiConference/app/src/main/res/layout/activity_main.xml
+++ b/MasaiConference/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activity.MainActivity">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottomNavigation"
+        android:id="@+id/fragmentContainer"/>
+
+
+
+    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+        android:id="@+id/bottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:mbn_countBackgroundColor="#ff6f00"
+        app:mbn_countTextColor="#000"
+        app:mbn_defaultIconColor="#909090"
+        app:mbn_rippleColor="@color/colorPrimary"
+        app:mbn_selectedIconColor="@color/colorPrimary"
+        app:mbn_shadowColor="#5000" />
+
+</RelativeLayout>
+<!--<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -26,4 +55,4 @@
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-</LinearLayout>
+</LinearLayout>-->
