--- a/MasaiConference/app/src/main/res/layout/fragment_meetand_chat.xml
+++ b/MasaiConference/app/src/main/res/layout/fragment_meetand_chat.xml
@@ -1,14 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.MeetandChatFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+        <!--<com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"
+            android:layout_marginBottom="681dp"
+            android:background="#39394d"
+            />-->
+    <include
+        android:id="@+id/app_bar_main"
+        layout="@layout/app_bar_chat" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:drawableStart="@drawable/history_logo"
+        android:id="@+id/appCompatButtonHistory"
+        android:drawableTint="@color/whiteColor"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="@dimen/dp_50"
+        android:layout_marginStart="@dimen/dp_20"
+        android:background="@color/transparentColor"
+        />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+        >
+
+
+        <SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_40"
+
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="@dimen/dp_20"
+            android:background="@drawable/grey_round"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search"
+
+            android:layout_marginStart="@dimen/dp_20"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.100000024" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:drawableStart="@drawable/ic_video_camera__1_"
+            android:id="@+id/appCompatButton_create"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            app:icon="@drawable/ic_video_camera__1_"
+            app:iconGravity="textTop"
+            app:iconPadding="@dimen/dp_2"
+            android:padding="12dp"
+            android:paddingTop="@dimen/dp_5"
+            android:gravity="center"
+            android:layout_marginStart="@dimen/dp_20"
+            android:background="@drawable/big_round"
+            android:backgroundTint="#d9642e"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/searchView"
+            app:layout_constraintVertical_bias="0.049" />
+
+
+
+
+        <!--<com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSignInGoogle"
+            style="@style/OutlinedButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="44dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/authentication_sign_in_google"
+            app:icon="@drawable/googleg_standard_color_18"
+            app:layout_constraintBottom_toTopOf="@+id/btnSignInEmail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvAppTagline" />-->
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Meeting"
+            android:textSize="@dimen/sp_10"
+            android:layout_marginEnd="@dimen/dp_25"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/appCompatButton2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appCompatButton_create"
+            app:layout_constraintVertical_bias="0.01999998" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/appCompatButton2"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            android:background="@drawable/big_round"
+            android:backgroundTint="#1976D2"
+            app:icon="@drawable/ic_add"
+            app:iconGravity="textTop"
+            app:iconPadding="@dimen/dp_2"
+            android:paddingTop="@dimen/dp_5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/appCompatButton3"
+            app:layout_constraintStart_toEndOf="@+id/appCompatButton_create"
+            app:layout_constraintTop_toBottomOf="@+id/searchView"
+            app:layout_constraintVertical_bias="0.050000012" />
+
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Join"
+            android:textSize="@dimen/sp_10"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/appCompatButton2"
+            app:layout_constraintStart_toStartOf="@+id/appCompatButton2"
+            app:layout_constraintTop_toBottomOf="@+id/appCompatButton_create"
+            app:layout_constraintVertical_bias="0.01999998" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/appCompatButton3"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            android:background="@drawable/big_round"
+            android:backgroundTint="#1976D2"
+            app:icon="@drawable/ic_date"
+            app:iconGravity="top"
+            app:iconPadding="@dimen/dp_2"
+            android:paddingTop="@dimen/dp_5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/appCompatButton_create"
+            app:layout_constraintTop_toBottomOf="@+id/searchView"
+            app:layout_constraintVertical_bias="0.050000012" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Schedule"
+            android:textSize="@dimen/sp_10"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/appCompatButton3"
+            app:layout_constraintStart_toStartOf="@+id/appCompatButton3"
+            app:layout_constraintTop_toBottomOf="@+id/appCompatButton3"
+            app:layout_constraintVertical_bias="0.01999998" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/appCompatButton4"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            android:background="@drawable/big_round"
+            android:backgroundTint="#1976D2"
+            app:icon="@drawable/ic_upload"
+            app:iconGravity="top"
+            app:iconPadding="@dimen/dp_2"
+            android:paddingTop="@dimen/dp_5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/appCompatButton3"
+            app:layout_constraintTop_toBottomOf="@+id/searchView"
+            app:layout_constraintVertical_bias="0.050000012" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Share Screen"
+            android:textSize="@dimen/sp_10"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/appCompatButton4"
+            app:layout_constraintStart_toStartOf="@+id/appCompatButton4"
+            app:layout_constraintTop_toBottomOf="@+id/appCompatButton4"
+            app:layout_constraintVertical_bias="0.01999998" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.3dp"
+            android:background="#CCCCCC"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintVertical_bias="0.00999999" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
