--- a/MasaiConference/app/src/main/res/values/styles.xml
+++ b/MasaiConference/app/src/main/res/values/styles.xml
@@ -24,6 +24,34 @@
         <item name="android:paddingBottom">12dp</item>
     </style>
 
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">#39394d</item>
+
+    </style>
+    <style name="MyCustomTheme">
+        <item name="mt_textCursorTint">#000000</item>
+    </style>
+
+    <!--*************************    Custom Theme  *******************************  -->
+    <style name="myCustomAppBarTheme" parent="Theme.AppCompat.Light">
+        <item name="android:actionBarStyle">@style/AppTheme.ActionBar</item>
+        <item name="actionBarStyle">@style/AppTheme.ActionBar</item>
+    </style>
+
+    <style name="AppTheme.ActionBar" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="android:titleTextStyle">@style/AppTheme.ActionBar.TitleText</item>
+        <item name="titleTextStyle">@style/AppTheme.ActionBar.TitleText</item>
+        <item name="android:height">100dp</item>
+        <item name="height">100dp</item>
+    </style>
+
+    <style name="AppTheme.ActionBar.TitleText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/whiteColor</item>
+    </style>
+
    <!-- <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <item name="android:background">?attr/colorSurface</item>
     </style>
@@ -58,4 +86,14 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">@dimen/text_size_s</item>
     </style>-->
+    <style name="FilledButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+    </style>
+        <style name="ClickableImageView">
+            <item name="android:clickable">true</item>
+            <item name="android:focusable">true</item>
+            <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        </style>
+
 </resources>
