--- a/MasaiConference/app/src/main/res/layout/activity_creat_meeting.xml
+++ b/MasaiConference/app/src/main/res/layout/activity_creat_meeting.xml
@@ -112,7 +112,7 @@
         android:layout_marginEnd="24dp"
         app:cornerRadius="@dimen/dp_10"
         android:layout_marginBottom="16dp"
-        android:text="Create meeting"
+        android:text="Create Meeting"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +163,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/main_btn_create_meeting"
+        android:text="Create Meeting"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
