--- a/MasaiConference/app/src/main/res/values-night/colors.xml
+++ b/MasaiConference/app/src/main/res/values-night/colors.xml
@@ -8,4 +8,8 @@
     <color name="colorOnPrimary">#000000</color>
 
     <color name="dividerColor">#616161</color>
+
+    <color name="light_gray">#E0E0E0</color>
+    <color name="dark_gray">#757575</color>
+    <color name="colorRipple">#BCBEC1</color>
 </resources>
