--- a/MasaiConference/app/src/main/res/values/colors.xml
+++ b/MasaiConference/app/src/main/res/values/colors.xml
@@ -15,4 +15,8 @@
     <color name="dividerColor">#E0E0E0</color>
     <color name="tx_credit">#ef5350</color>
     <color name="black">#FF000000</color>
+    <color name="light_gray">#E0E0E0</color>
+    <color name="dark_gray">#757575</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="colorRipple">#BCBEC1</color>
 </resources>
