--- a/MasaiConference/app/src/main/res/layout/fragment_meetand_chat.xml
+++ b/MasaiConference/app/src/main/res/layout/fragment_meetand_chat.xml
@@ -110,7 +110,7 @@
             android:layout_height="@dimen/dp_50"
             android:background="@drawable/big_round"
             android:backgroundTint="#1976D2"
-            app:icon="@drawable/ic_add"
+            app:icon="@drawable/add"
             app:iconGravity="textTop"
             app:iconPadding="@dimen/dp_2"
             android:paddingTop="@dimen/dp_5"
@@ -189,13 +189,108 @@
             app:layout_constraintVertical_bias="0.01999998" />
 
         <View
+            android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="0.3dp"
             android:background="#CCCCCC"
-
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintVertical_bias="0.00999999" />
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/grey_round"
+            app:cardCornerRadius="@dimen/dp_10"
+            android:layout_margin="@dimen/dp_10"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="20dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                app:layout_constraintVertical_bias="0.0">
+
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnRejoinMeeting"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_marginStart="@dimen/dp_20"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/big_round"
+                    android:backgroundTint="#1976D2"
+                    android:paddingTop="@dimen/dp_5"
+                    app:icon="@drawable/ic_baseline_perm_contact_calendar_24"
+                    app:iconGravity="top"
+                    app:iconPadding="@dimen/dp_2"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <!-- <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tvMeetingCode"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="@dimen/text_size_m"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/tvMeetingTime"
+                    app:layout_constraintEnd_toStartOf="@+id/btnRejoinMeeting"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    tools:text="025 263 2663 223" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tvMeetingTime"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="?android:attr/textColorSecondary"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/tvMeetingCode"
+                    app:layout_constraintStart_toStartOf="@+id/tvMeetingCode"
+                    app:layout_constraintTop_toBottomOf="@+id/tvMeetingCode"
+                    tools:text="Last joined 23 minutes ago" />-->
+                <TextView
+                    android:id="@+id/tvContact"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:layout_marginBottom="@dimen/dp_15"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="@dimen/text_size_m"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/btnRejoinMeeting"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    tools:text="Contacts &amp; Chat" />
+
+                <TextView
+                    android:id="@+id/tvDesc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:textColor="?android:attr/textColorSecondary"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/btnRejoinMeeting"
+                    app:layout_constraintTop_toBottomOf="@+id/tvContact"
+                    tools:text="Let's chat with your friends" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
