--- a/MasaiConference/app/src/main/res/layout/activity_creat_meeting.xml
+++ b/MasaiConference/app/src/main/res/layout/activity_creat_meeting.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    tools:context=".CreateMeetingActivity">
+    tools:context=".CreatMeetingActivity">
 
 
     <androidx.constraintlayout.widget.Group
