--- a/MasaiConference/app/src/main/res/layout/app_bar_meetingsettings.xml
+++ b/MasaiConference/app/src/main/res/layout/app_bar_meetingsettings.xml
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/txt_title"
+            android:id="@+id/txt_SettingTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Meeting Settings"
