--- a/MasaiConference/app/src/main/res/values/styles.xml
+++ b/MasaiConference/app/src/main/res/values/styles.xml
@@ -34,6 +34,20 @@
         <item name="mt_textCursorTint">#000000</item>
     </style>
 
+
+    <style name="NumberProgressBar_Custome1">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="progress_current">0</item>
+        <item name="progress_max">100</item>
+        <item name="progress_reached_bar_height">4.5dip</item>
+        <item name="progress_reached_color">@color/black</item>
+        <item name="progress_text_color">@color/black</item>
+        <item name="progress_text_size">9sp</item>
+        <item name="progress_unreached_bar_height">2.25dip</item>
+        <item name="progress_unreached_color">#ffffff</item>
+    </style>
+
     <!--*************************    Custom Theme  *******************************  -->
     <style name="myCustomAppBarTheme" parent="Theme.AppCompat.Light">
         <item name="android:actionBarStyle">@style/AppTheme.ActionBar</item>
