--- a/MasaiConference/app/src/main/res/layout/fragment_meetand_chat.xml
+++ b/MasaiConference/app/src/main/res/layout/fragment_meetand_chat.xml
@@ -75,21 +75,7 @@
 
 
 
-        <!--<com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSignInGoogle"
-            style="@style/OutlinedButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/authentication_sign_in_google"
-            app:icon="@drawable/googleg_standard_color_18"
-            app:layout_constraintBottom_toTopOf="@+id/btnSignInEmail"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvAppTagline" />-->
+
 
         <TextView
             android:id="@+id/textView"
@@ -281,7 +267,7 @@
                     app:layout_constraintStart_toStartOf="@+id/tvMeetingCode"
                     app:layout_constraintTop_toBottomOf="@+id/tvMeetingCode"
                     tools:text="Last joined 23 minutes ago" />-->
-                <TextView
+                <!--<TextView
                     android:id="@+id/tvContact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -294,7 +280,21 @@
                     app:layout_constraintStart_toEndOf="@+id/btnRejoinMeeting"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_chainStyle="packed"
-                    tools:text="Contacts &amp; Chat" />
+                    tools:text="Contacts &amp; Chat" />-->
+                <TextView
+                    android:id="@+id/tvContact"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contacts &amp; Chat"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:layout_marginBottom="@dimen/dp_15"
+                    android:textSize="@dimen/text_size_m"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="@dimen/dp_25"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/btnRejoinMeeting"
+                    app:layout_constraintTop_toTopOf="parent"
+                     />
 
                 <TextView
                     android:id="@+id/tvDesc"
@@ -305,7 +305,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/btnRejoinMeeting"
                     app:layout_constraintTop_toBottomOf="@+id/tvContact"
-                    tools:text="Let's chat with your friends" />
+                    android:text="Let's chat with your friends" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
