--- a/MasaiConference/app/src/main/res/layout/fragment_settings.xml
+++ b/MasaiConference/app/src/main/res/layout/fragment_settings.xml
@@ -52,8 +52,9 @@
                     android:layout_height="50dp"
                     android:layout_marginTop="@dimen/dp_20"
                     android:padding="4dp"
-                    android:src="@drawable/ic_baseline_account_circle_24"
+                    android:src="@drawable/default_profile_image"
                     app:riv_oval="true" />
+
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -70,7 +71,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="6dp"
                         android:text="Nipun Jain"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
+                        android:background="?attr/selectableItemBackground"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
